<resources>
    <string name="app_name">Backup</string>
    <string name="app_name_long">Privacy Friendly Backup</string>
    <string name="channel_name">Default</string>
    <string name="channel_description">Default notification channel</string>
    <string name="notification_user_interaction_required_title">Attention required</string>
    <string name="notification_user_interaction_required_content">Settings for the background encryption missing. Please click this notification to proceed.</string>
    <string name="title_item_list" translatable="false">Items</string>
    <string name="title_item_detail" translatable="false">Item Detail</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_select_all">Select all</string>
    <string name="menu_title_sort">Sort</string>
    <string name="menu_title_delete">Delete</string>
    <string name="menu_main_backup">Backup Overview</string>
    <string name="menu_main_apps">Available Applications</string>
    <string name="menu_main_encryption">Encryption Settings</string>
    <string name="menu_main_settings">Backup Settings</string>
    <string name="menu_main_help">Help</string>
    <string name="menu_main_about">About</string>
    <string name="pref_category_encryption">Encryption Settings</string>
    <string name="pref_encryption_enable">Enable encryption</string>
    <string name="pref_encryption_passphrase">Passphrase</string>
    <string name="pref_encryption_select_key">Select key</string>
    <string name="pref_encryption_enable_on">Encryption is enabled</string>
    <string name="pref_encryption_enable_off">Data will be stored unencrypted</string>
    <string name="pref_encryption_select_key_summary">Click to select an encryption key</string>
    <string name="pref_encryption_crypto_provider">Choose Crypto Provider</string>
    <string name="fragment_title_encryption">Encryption Settings</string>
    <string name="dialog_delete_confirmation_message">Are you sure you want to delete the stored backups? This will permanently delete them. You will not be able to restore them.</string>
    <string name="dialog_delete_confirmation_negative">Cancel</string>
    <string name="dialog_delete_confirmation_positive">Delete</string>
    <string name="dialog_delete_confirmation_title">Delete Confirmation</string>
    <string name="menu_item_backup">Create Backup</string>
    <string name="menu_item_cancel_jobs">Cancel current jobs</string>
    <string name="menu_item_restore_most_recent_backup">Restore most recent Backup</string>
    <string name="menu_item_manage_backups">Manage Backups</string>
    <string name="job_action_encrypt">Encrypt</string>
    <string name="job_action_dcrypt">Decrypt</string>
    <string name="job_action_store">Store</string>
    <string name="job_action_load">Load</string>
    <string name="job_action_pfa_backup">Backup</string>
    <string name="job_action_pfa_restore">Restore</string>
    <string name="fragment_title_application_overview">Application Overview</string>
    <string name="fragment_title_backup_overview">Backup Overview</string>
    <string name="cancel">Cancel</string>
    <string name="restore">Restore</string>
    <string name="dialog_restore_confirmation_message">Are you sure you want to restore this backup? It is advised to create a backup before you restore data.</string>
    <string name="dialog_restore_confirmation_title">Restore data</string>
    <string name="pref_category_storage">Storage Settings</string>
    <string name="pref_storage_type">Storage Type</string>
    <string name="pref_category_automatic_backup">Automatic Backups</string>
    <string name="storage_type_external">External Storage</string>
    <string name="storage_type_drive">Google Drive</string>
    <string name="menu_item_inspect">Inspect</string>
    <string name="menu_item_restore">Restore</string>
    <string name="activity_data_inspection_error_id_not_valid">Error: Id is not valid</string>
    <string name="menu_title_export">Export</string>
    <string name="data_inspection_load_status_unknown">Unknown</string>
    <string name="data_inspection_load_status_loading">Loading…</string>
    <string name="data_inspection_load_status_decrypting">Decrypting…</string>
    <string name="data_inspection_load_status_error">Unknown error.</string>
    <string name="data_inspection_load_status_decryption_error">An unknown decryption error occurred. Please check if the correct cryptography provider was selected in the encryption settings and the decryption key is still available in the cryptography provider. </string>
    <string name="data_inspection_load_status_done">Done</string>
    <string name="menu_title_add">Import backup</string>
    <string name="app_import_backup">Import Backup</string>
    <string name="menu_item_export">Export</string>
    <string name="data_import_success_dialog_title">Data Import Complete</string>
    <string name="data_import_success_dialog_message">The backup was imported successfully.\nApp: %s \nDate: %s</string>
    <string name="data_import_success_message">The backup was imported successfully.</string>
    <string name="data_import_multiple_imported_message">%d out of %d backups imported.</string>
    <string name="data_import_success_dialog_confirm">Okay</string>
    <string name="data_import_error_dialog_confirm">Okay</string>
    <string name="data_import_error_dialog_title">Data Import Failed</string>
    <string name="data_import_error_dialog_message">The file could not be imported. Please make sure it is a valid backup file.</string>
    <string name="data_import_confirmation_dialog_confirm">Import</string>
    <string name="data_import_confirmation_dialog_message">Do you want to import this backup into the list of backups?</string>
    <string name="data_import_confirmation_dialog_title">Backup Import</string>
    <string name="data_import_confirmation_dialog_cacncel">Cancel</string>
    <string name="dialog_data_import_start_confirm">Yes</string>
    <string name="dialog_data_import_start_cancel">No</string>
    <string name="dialog_data_import_start_title">Backup Import</string>
    <string name="dialog_data_import_start_message">Do you want to import a backup file?</string>
    <string name="data_export_confirmation_dialog_cancel">Cancel</string>
    <string name="data_export_confirmation_dialog_confirm">Export</string>
    <string name="data_export_confirmation_dialog_title">Backup Export</string>
    <string name="data_export_confirmation_dialog_message">Do you want to export this backup?</string>
    <string name="data_export_confirmation_dialog_checkbox">Encrypt Backup</string>
    <string name="dialog_data_export_encrypted_warning">Saving the backup into an external data storage unencrypted leaves your data unprotected.</string>
    <string name="data_inspection_load_status_error_invalid_json">The backup seems to be corrupted. Try creating a new backup or retry importing the backup.</string>
    <string name="dialog_data_export_start_confirm">Yes</string>
    <string name="dialog_data_export_start_cancel">No</string>
    <string name="dialog_data_export_start_title">Backup Export</string>
    <plurals name="dialog_data_export_start_message">
        <item quantity="one">Do you want to export the selected backup?</item>
        <item quantity="other">Do you want to export the %1$d selected backups?</item>
    </plurals>
    <plurals name="dialog_data_export_multiple_encrypted">
        <item quantity="one">Your selection contains %d encrypted backup.</item>
        <item quantity="other">Your selection contains %d encrypted backups.</item>
    </plurals>
    <string name="dialog_data_export_multiple_encrypted_warning">Important: Encrypted backups will stay encrypted. If you want to export a backup without encryption use \"%s\" on a backup and use the export function there.</string>
    <string name="data_export_toast_loading">Loading Backups %d/%d…</string>
    <string name="data_export_toast_writing">Writing to file…</string>
    <string name="data_export_toast_export_successful">Export complete</string>
    <string name="data_export_toast_export_error">Something went wrong</string>
    <string name="dialog_dont_show_again">Do not show this again.</string>
    <string name="menu_title_encryption_info">Encryption Info</string>
    <string name="backup_overview_no_entries_text">There is currently no backup. Either create or import new backups to see them in this list.</string>
    <string name="application_overview_no_entries_text">There is currently no application supporting this backup protocol installed.</string>
    <string name="version_number">Version: %s</string>
    <string name="about_author">Authors:</string>
    <string name="about_author_names" translatable="false">Christopher Beckmann</string>
    <string name="about_author_contributors">and contributors</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by the SECUSO Research Group at Karlsruher Institute for Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-backup">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="data_inspection_signature_user_id">Signed by %s</string>
    <string name="data_inspection_signature_key_id">Key ID: %s</string>
    <string name="signature_result_no_signature">No Signature</string>
    <string name="signature_result_invalid">Invalid Signature</string>
    <string name="signature_result_valid">Valid</string>
    <string name="signature_result_key_insecure">Insecure Key</string>
    <string name="signature_result_key_expired">Key Expired</string>
    <string name="signature_result_key_revoked">Key Revoked</string>
    <string name="signature_result_key_unconfirmed">Key Unconfirmed</string>
    <string name="signature_result_key_missing">Key Missing</string>
    <string name="help_whatis">What is the Privacy Friendly Backup App?</string>
    <string name="help_whatis_answer">The Privacy Friendly Backup Application helps users create backups of other privacy friendly apps. They communicate, send and receive data to save and restore app data.</string>
    <string name="help_encryption">How does the encryption work?</string>
    <string name="help_encryption_answer1">The encryption is done via an external cryptographic provider. For more information you can check out the openpgp-api that is used by this application.</string>
    <string name="help_encryption_answer2">In order to use the encryption you will need to install a cryptographic provider application. We recommend the OpenKeyChain application because it is open source and available in both the Google Play Store as well as the f-Droid store.</string>
    <string name="help_which_apps">How many and which apps are currently supported?</string>
    <string name="help_which_apps_answer1">Currently only the Notes App is supported but we are working on adding more applications to this list.</string>

</resources>