<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_title_sort"
        android:icon="@drawable/ic_sort_24"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_title_search"
        android:icon="@drawable/ic_search_24"
        app:actionLayout="@layout/search_view"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/menu_title_select_all"
        android:icon="@drawable/ic_check_box_outline_blank_24"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_title_delete"
        android:icon="@drawable/ic_delete_24"
        app:showAsAction="always" />

</menu>